--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.1.4",
     "vee-validate": "^4.9.5",
     "vue": "^3.3.2",
+    "vue-i18n": "^8.28.2",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
